delete button working

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -26,7 +26,7 @@
                   <td>{{this.prodID}}</td>
                   <td>{{this.olUnitofIssue}}</td>
                   <td>{{this.olQuantity}}</td>
-                  <td>{{this.usSupervisorID}}</td>
+                  <td>{{this.usName}}</td>
                   <td>{{> delete}}</td>
                   <td>{{> addOne}}</td>
                 </tr>
