--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -7,7 +7,7 @@
       <div class='row padIt'>
         <div class='col-8 offset-2'>
           <h5>Pending Order</h5>
-           <a href='/basicuser' id='back' class='btn btn-primary right top-back'>Back</a>
+          <a href='/basicuser' id='back' class='btn btn-primary right top-back'>Back</a>
           <div>
             <table class='highlight'>
               <thead class='list-group'>
@@ -54,7 +54,7 @@
               <tbody id='order-history' data-id='{{this.id}}' class='list-group-item'>
                 {{#each order}}
                 <tr>
-                  <td id='order-detail{{this.id}}'><a class='waves-effect waves-light modal-trigger' href='#modal{{this.id}}'>{{this.id}}{{> orderHistoryModal}}</a></td>
+                  <td><a id='{{this.id}}' class='order-detail waves-effect waves-light modal-trigger' href='#modal{{this.id}}'>{{this.id}}{{> orderHistoryModal}}</a></td>
                   <td>{{this.updatedAt}}</td>
                   <td>{{this.usName}}</td>
                 </tr>
