--- a/views/partials/orderHistoryModal.handlebars
+++ b/views/partials/orderHistoryModal.handlebars
@@ -4,19 +4,14 @@
         <table class='highlight'>
             <thead id='order-list' class='list-group'>
                 <tr>
-                    <th>Order #</th>
-                    <th>Submitted</th>
+                    <th>Product #</th>
+                    <th>Qty.</th>
                     <th>Total</th>
                     <th>Employee</th>
                 </tr>
             </thead>
-            <tbody data-id='{{this.id}}' class='list-group-item'>
-                <tr>
-                    <td>{{this.id}}</td>
-                    <td>{{this.updatedAt}}</td>
-                    <td>{{this.olTotal}}</td>
-                    <td>{{this.usSupervisorID}}</td>
-                </tr>
+            <tbody id='modal-order-history' data-id='{{this.id}}' class='list-group-item'>
+               
             </tbody>
         </table>
         <div class="modal-footer">
