forgot to add the category header

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -12,6 +12,7 @@
             <table class='highlight'>
               <thead class='list-group'>
                 <tr>
+                  <th>Category</th>
                   <th>Product</th>
                   <th>Unit of Issue</th>
                   <th>Quantity</th>
