fixed orderline delete

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -12,6 +12,7 @@
             <table class='highlight'>
               <thead class='list-group'>
                 <tr>
+                  <th>ID</th>
                   <th>Category</th>
                   <th>Product</th>
                   <th>Unit of Issue</th>
@@ -24,10 +25,13 @@
               <tbody id='order-list' data-id='{{this.id}}' class='list-group-item'>
                 {{#each orderline}}
                 <tr>
+                  <td>{{this.id}}</td>
                   <td>{{this.prodCategory}}</td>
                   <td>{{this.prodName}}</td>
                   <td>{{this.olUnitofIssue}}</td>
-                  <td>{{this.olQuantity}}</td>
+                  <td>
+                    <input id="{{this.id}}qty-requested" type="text" class="input-field" value="{{this.olQuantity}}">
+                  </td>
                   <td>{{this.usName}}</td>
                   <td>{{> delete}}</td>
                   <td>{{> addOne}}</td>
