--- a/views/underpar.handlebars
+++ b/views/underpar.handlebars
@@ -23,7 +23,7 @@
 						<td>{{this.prodOnHand}}</td>
 						<td>{{this.prodPAR}}</td>
 						<td>
-							<input id="qty_order" type="text" class="input-field">
+							<input id="{{this.id}}qty" type="text" class="input-field">
 						</td>
 						<td>{{> addOne}}</td>
 					</tr>
