--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -12,7 +12,7 @@
             <table class='highlight'>
               <thead class='list-group'>
                 <tr>
-                  <th>Product</th>
+                  <th>Category</th>
                   <th>Unit of Issue</th>
                   <th>Quantity</th>
                   <th>Employee</th>
@@ -45,7 +45,7 @@
                 <button id='submit' class='btn btn-primary right'>Submit</a></button>
             </form>
             <table class='highlight'>
-              <thead id='order-list' class='list-group'>
+              <thead id='old-order-list' class='list-group'>
                 <tr>
                   <th>Order #</th>
                   <th>Submitted</th>
