lastLogin gives default value, signup form has all fields

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -11,7 +11,7 @@
               <input id="usName" type="text" class="validate signup-bg" name='username'/>
               <label for="username">First Name and Last Name (i.e. John Doe)</label>
             </div>
-            {{!-- <div class="row">
+            <div class="row">
                 <div class="input-field col s6">
                     <input id="phoneNumber" type="text" class="validate" name='phoneNumber'/>
                     <label for="phoneNumber">Phone Number (xxx-xxx-xxx)</label>
@@ -20,14 +20,14 @@
                     <input id="email" type="text" class="validate" name='email'/>
                     <label for="email">Email</label>
                 </div>
-            </div> --}}
-            {{!-- <div class="row">
+            </div>
+            <div class="row">
                 <div class="input-field col s12">
                     <input id="address" type="text" class="validate" name='address'/>
                     <label for="address">Street Address</label>
                 </div>
-            </div> --}}
-            {{!-- <div class="row">
+            </div>
+            <div class="row">
                 <div class="input-field col s4">
                     <input id="city" type="text" class="validate" name='city'/>
                     <label for="city">City</label>
@@ -40,7 +40,7 @@
                     <input id="zip" type="text" class="validate" name='zip'/>
                     <label for="zip">Zip</label>
                 </div>
-            </div> --}}
+            </div>
             <div class="row">
                 <div class="input-field col s4">
                     <input id="usRole" type="text" class="validate" name='role'/>
