--- a/views/partials/addOne.handlebars
+++ b/views/partials/addOne.handlebars
@@ -1,1 +1,1 @@
-<a id='product-list' class=" add right btn-floating btn-small waves-effect waves-light red" data-id='{{this.id}}'><i class="material-icons">add</i></a>
+<a id='product-list' class=" add right btn-floating btn-small waves-effect waves-light red tooltipped" data-id='{{this.id}}' data-position="top" data-tooltip="Update Quantity"><i class="material-icons">update</i></a>
