--- a/views/partials/delete.handlebars
+++ b/views/partials/delete.handlebars
@@ -1,2 +1,2 @@
 
-<a id='{{this.id}}' class="delete right add btn-floating btn-small waves-effect waves-light red" data-id="{{this.prodID}}"><i class="material-icons">remove</i></a>
+<a id='{{this.id}}' class="delete right add btn-floating btn-small waves-effect waves-light red tooltipped" data-id="{{this.prodID}}" data-position="top" data-tooltip="Delete Requirement"><i class="material-icons">delete</i></a>
