moved unitofissue to products

--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -21,7 +21,7 @@
                 {{#each order}}
                 <td><a href='#modalOrder{{this.id}}' class='modal-trigger'>{{this.prodID}}</a></td>
                 {{> modalOrder}}
-                <td>{{this.olUnitofIssue}}</td>
+                <td>{{this.prodUnitofIssue}}</td>
                 <td>{{this.olQuantity}}</td>
                 {{/each}} {{#each product}}
                 <td>{{this.prodName}}</td>
