--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -26,7 +26,7 @@
                 <tr>
                   <td>{{this.prodCategory}}</td>
                   <td>{{this.prodName}}</td>
-                  <td>{{this.olUnitofIssue}}</td>
+                  <td>{{this.prodUnitofIssue}}</td>
                   <td>{{> updateQuantity}}</td>
                   <td>
                     <input id="{{this.id}}" type="text" class="input-field qtyRequested tooltipped" data-position="top" data-tooltip="Enter new quantity to request" value="{{this.olQuantity}}">
