--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -69,7 +69,7 @@
             </div>
             <br>
             <div>
-              <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+              <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
               {{> navbuttons}}
             </div>
           </div>
