--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -35,7 +35,7 @@
                             {{/each}}
                         </tbody>
                     </table>
-                    <a id='logOut' class='btn btn-primary right' href='/'>Log out</a>
+                    <a id='logOut' class='btn btn-primary right' href='/logout'>Log out</a>
                     {{> navbuttons}}
                 </div>
             </div>
