--- a/views/underpar.handlebars
+++ b/views/underpar.handlebars
@@ -18,12 +18,12 @@
 				<tbody class='list-group-item'>
 					{{#each par}}
 					<tr>
-						<td id="order-{{this.id}}" data-prodid="{{this.prodID}}" class="prodName">{{this.prodName}}</td>
+						<tdclass="prodName">{{this.prodName}}</td>
 						<td class="prodCategory">{{this.prodCategory}}</td>
 						<td>{{this.prodOnHand}}</td>
 						<td>{{this.prodPAR}}</td>
 						<td>
-							<input id="{{this.id}}" type="text" class="input-field qtyRequested" value="{{this.olQuantity}}">
+							<input id="{{this.id}}" data-prodid="{{this.prodID}}" type="text" class="input-field qtyRequested" value="{{this.olQuantity}}">
 						</td>
 						<td>{{> addOne}}</td>
 					</tr>
