--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -13,10 +13,7 @@
               <thead class='list-group'>
                 <tr>
                   <th>Category</th>
-<<<<<<< HEAD
-=======
                   <th>Product</th>
->>>>>>> c9d8998d976183d0910b722a1e5628270aac9c7e
                   <th>Unit of Issue</th>
                   <th></th>
                   <th>Quantity</th>
@@ -64,7 +61,7 @@
                   <td id='order-detail{{this.id}}'><a class='waves-effect waves-light modal-trigger' href='#modal{{this.id}}'>{{this.id}}{{>
                       orderHistoryModal}}</a></td>
                   <td>{{this.updatedAt}}</td>
-                  <td>{{this.usName}}</td>
+                  <td>{{this.usSupervisorID}}</td>
                 </tr>
                 {{/each}}
               </tbody>
@@ -83,5 +80,4 @@
   <script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js'></script>
   <script src='/js/index.js'></script>
-  <script src='/js/products.js'></script>
   <script src='/js/orderSubmit.js'></script>
