romeved links to products.js file. almost have the edit user working

--- a/views/order.handlebars
+++ b/views/order.handlebars
@@ -59,8 +59,7 @@
               <tbody id='order-history' data-id='{{this.id}}' class='list-group-item'>
                 {{#each order}}
                 <tr id='orderInfo'>
-                  <td>{{this.id}}{{>
-                      orderHistoryModal}}
+                  <td>{{this.id}}{{> orderHistoryModal}}
                   </td>
                   <td>{{this.updatedAt}}</td>
                   <td>{{this.usSupervisorID}}</td>
