--- a/views/partials/orderHistoryModal.handlebars
+++ b/views/partials/orderHistoryModal.handlebars
@@ -1,5 +1,5 @@
 <!-- Modal Structure -->
-<div id="modal{{this.id}}" class="modal">
+<div id="modalOrderHistory{{this.id}}" class="modal">
     <div class="modal-content">
         <table class='highlight'>
             <thead id='order-list' class='list-group'>
