--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -46,7 +46,9 @@ body {
   .list-group-item {
     line-height: 2.5;
   }
-  
+  .clear{
+    margin-right: 5px;
+  }
   h2 {
     margin-top: 0px;
     padding-top: 15px;
@@ -55,7 +57,12 @@ body {
   h5 {
     margin-top: 10px;
   }
-  
+  .header-background{
+    background-color: rgba(255, 255, 255, 0.644);
+    border-radius: 5px;
+    border: 1px solid rgba(109, 109, 109, 0.808);
+    max-width: 35vw;
+  }
   .jumbo {
     background: url('../../images/market-601580_1280.jpg') no-repeat center fixed;
     -webkit-background-size: cover;
