--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,3 +1,5 @@
-<div class='jumbo'>
-    <h2 class='white-text center header'>Dynamite Kitchen</h2>
+<div class='jumbo valign-wrapper'>
+  <div class='container header-background'>
+    <h2 class='black-text center header'>Dynamite Kitchen Supplier</h2>
   </div>
+</div>
