--- a/views/basicuser.handlebars
+++ b/views/basicuser.handlebars
@@ -10,10 +10,10 @@
           <table class='highlight'>
             <thead id='product-order-list' class='list-group'>
               <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Quantity</th>
-                <th>Add</th>
+                <th class='center-align'>Name</th>
+                <th class='center-align'>Category</th>
+                <th class='center-align'>Quantity</th>
+                <th class='center-align'>Add</th>
               </tr>
             </thead>
             <tbody data-id='{{this.id}}' class='list-group-item'>
@@ -21,14 +21,14 @@
                 {{#each order}}
                 <td><a href='#modalOrder{{this.id}}' class='modal-trigger'>{{this.prodID}}</a></td>
                 {{> modalOrder}}
-                <td>{{this.prodUnitofIssue}}</td>
-                <td>{{this.olQuantity}}</td>
+                <td class='center-align'>{{this.prodUnitofIssue}}</td>
+                <td class='center-align'>{{this.olQuantity}}</td>
                 {{/each}} {{#each product}}
-                <td>{{this.prodName}}</td>
-                <td>{{this.prodCategory}}</td>
-                <td>{{this.prodOnHand}}</td>
-                <td>{{> delete}}</td>
-                <td>{{> addOne}}</td>
+                <td class='center-align'>{{this.prodName}}</td>
+                <td class='center-align'>{{this.prodCategory}}</td>
+                <td class='center-align'>{{this.prodOnHand}}</td>
+                <td class='center-align'>{{> delete}}</td>
+                <td class='center-align'>{{> addOne}}</td>
                 {{/each}}
               </tr>
             </tbody>
@@ -41,7 +41,7 @@
             </div>
             <div class='row'>
               <button data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right">Submit</button>
-              <button id='clear' data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right">Clear</button>
+              <button id='clear' data-target="modalProducts{{this.id}}" class="btn modal-trigger btn btn-primary right clear">Clear</button>
               {{!-- submit button for product search --}}
               <div>
                 <a id='category-btn' class='dropdown-trigger btn' href='#' data-target='dropdown1'>Category</a> {{!-- category
@@ -59,18 +59,18 @@
             <thead id='product-list' class='list-group'>
               <tr>
                 <th>Name</th>
-                <th>Category</th>
-                <th>Quantity</th>
-                <th>Add</th>
+                <th class='center-align'>Category</th>
+                <th class='center-align'>Quantity</th>
+                <th class='center-align'>Add</th>
               </tr>
             </thead>
             <tbody id='listingTable' data-id='{{this.id}}' class='list-group-item'>
               {{#each product}}
               <tr>
                 <td>{{this.prodName}}</td>
-                <td>{{this.prodCategory}}</td>
-                <td>{{this.prodOnHand}}</td>
-                <td>{{> addOne}}</td>
+                <td class='center-align'>{{this.prodCategory}}</td>
+                <td class='center-align'>{{this.prodOnHand}}</td>
+                <td class='center-align'>{{> addOne}}</td>
               </tr>
               {{/each}}
             </tbody>
